[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-rag"
version = "0.2.0"
description = "TurboQuant SDK for deterministic embedding compression"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["turboquant_rag*"]

